# openplace

./: .gitignore  TODO.md  alembic.ini  main.py  pyproject.toml
.github/workflows/: entity-recognition.yml  gather-place-links.yml  publish-wheels.yml
alembic/: env.py
alembic/versions/: 81cd88ecd379_create_new_tables.py  f01df230acdc_initial_migration.py
openplace/: __init__.py  cli.py
openplace/storage/local/: models.py  queries.py  settings.py
openplace/tasks/: fetch.py
openplace/tasks/export/: archives.py
openplace/tasks/extract/: cleaning.py  fields.py  markdown.py  patterns.py  types.py  utils.py
openplace/tasks/scrape/: exceptions.py  fetch.py  navigate.py  parse.py  patterns.py
openplace/tasks/store/: local.py  types.py  writers.py
openplace/workflows/: files.py  metadata.py
