[project]
name = "openplace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.3.2",
    "markitdown[docx,pdf,pptx]>=0.1.2",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "sqlmodel>=0.0.24",
    "typer>=0.16.0",
]

[project.scripts]
openplace="openplace.cli:main"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv]
package=true
